--- a/bilprojekt/citroen.html
+++ b/bilprojekt/citroen.html
@@ -5,12 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="styles/mutual_styles.css"/>
+    <link rel="stylesheet" href="styles/citroen.css"/>
+    
 
 
 </head>
 
 <body>
     <h1>Citroen</h1>
+
+    <p>Test</p>
 
 
 </body>
