--- a/bilprojekt/citroen.html
+++ b/bilprojekt/citroen.html
@@ -14,6 +14,16 @@
 
 <body>
     <h1>Citroen</h1>
+    <nav>
+        <ul class="nav_links">
+            <li><a href="citroen.html">citroen</a></li>
+            <li><a href="index.html">index</a></li>
+            <li><a href="mercedes.html">mercedes</a></li>
+            <li><a href="mg.html">mg</a></li>
+            <li><a href="tesla.html">tesla</a></li>
+            <li><a href="volkswagen.html">volkswagen</a></li>
+        </ul>
+    </nav>
 
     <p>Test</p>
 
