--- a/bilprojekt/citroen.html
+++ b/bilprojekt/citroen.html
@@ -16,8 +16,8 @@
     <h1>Citroen</h1>
     <nav>
         <ul class="nav_links">
+            <li><a href="index.html">Alle biler</a></li>
             <li><a href="citroen.html">citroen</a></li>
-            <li><a href="index.html">index</a></li>
             <li><a href="mercedes.html">mercedes</a></li>
             <li><a href="mg.html">mg</a></li>
             <li><a href="tesla.html">tesla</a></li>
